[tool.poetry]
name = "easyapplogic"
version = "0.1.0"
description = "Generic logic for easyScience applications"
authors = ["Andrew Sazonov", "Simon Ward"]
license = "GPL-3.0-only"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
